# werewolf_notebook

./: .env.example  PROJECT_OVERVIEW.md  README.md  main.py  pyproject.toml
core/: __init__.py  nodes.py  types.py
games/: one_night.py
graphs/: player_graph.py
llm/: ollama.py
notebook/: 01_handle_event.ipynb  PlayerGraph.ipynb  PlayerGraph_llm.ipynb
notebooks/: 01_dummy_graph.ipynb  01_handle_event.ipynb
src/: main.py
src/app/controllers/: __init__.py  game_controller.py
src/app/repositories/: __init__.py  session_repository.py
src/app/schemas/: __init__.py  game_responses.py
src/config/: llm.py  redis.py
src/core/: __init__.py  controller.py  nodes.py  session.py  types.py
src/game/: log_summarizer.py  one_night.py
src/games/: one_night.py
src/graphs/: gm_graph.py  player_graph.py
src/llm/: ollama.py
tests/: simple_syntax_check_strategy.py  verify_gm_speaker_selection.py  verify_hallucination_prevention.py  verify_prompts.py  verify_pronoun_ban.py  verify_speak_review_refine.py  verify_speak_unknown_result.py  verify_strategy_diversity.py  verify_strategy_models.py  verify_strategy_timing.py  verify_target_warning.py
tests/manual/: test_gm_prompt_syntax.py  test_gm_prompt_syntax_safe.py  test_gm_prompt_syntax_v3.py  verify_game_definition_compliance.py  verify_gm_plan.py  verify_session_injection.py  verify_summarized_prompts.py
tests/unit/: test_gm_plan_structure.py  test_milestone_policy_components.py  test_new_strategy_structure.py  test_player_strategy_structure.py  test_role_registry.py  test_thief_role.py  test_vote_result.py
(+114 files in other folders)
