[project]
name = "werewolf-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "notebook>=7.5.1",
    "pydantic>=2.12.5",
    "vllm>=0.13.0",
]

[dependency-groups]
dev = [
    "rich>=14.2.0",
    "ruff>=0.14.10",
]
